having issues pushing repos

--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@
     <script src="index.js"></script>
 </body>
 </html>
-<!--made heart animation trail-->
+<!--made heart animation trail having issues creating repository-->
